--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,14 +22,12 @@ dependencies = [
     "pyyaml>=6.0",
     "datasets>=2.0.0",
     "rich>=13.0",
-]
-
-[project.optional-dependencies]
-ifeval = [
     "instruction_following_eval @ git+https://github.com/josejg/instruction_following_eval.git",
     "nltk>=3.8",
     "langdetect>=1.0",
 ]
+
+[project.optional-dependencies]
 dev = [
     "pytest>=7.0",
     "pytest-asyncio>=0.21",
@@ -43,12 +41,22 @@ Repository = "https://github.com/rahuls-coder/prefpo"
 requires = ["setuptools>=68.0"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+# The repo root IS the prefpo package (contains __init__.py directly).
+# package-dir maps "prefpo" -> ".", and we list subpackages explicitly
+# to avoid the flat-layout discovery pitfall.
+packages = [
+    "prefpo",
+    "prefpo.llm",
+    "prefpo.prompts",
+    "prefpo.data",
+    "prefpo.grading",
+    "prefpo.judges",
+    "prefpo.tests",
+]
+
 [tool.setuptools.package-dir]
 prefpo = "."
-
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["prefpo*"]
 
 [tool.setuptools.package-data]
 "prefpo.judges" = ["*.yaml"]
