Rename show_target to show_expected, make grader samples optional, add plain-text progress fallback for non-TTY environments

--- a/examples/ifeval_config.yaml
+++ b/examples/ifeval_config.yaml
@@ -9,7 +9,7 @@ discriminator:
     name: "openai/gpt-5"
     is_reasoning: true
     reasoning_effort: "medium"
-  show_target: true
+  show_expected: true
   # criteria populated per-sample by build_ifeval_config()
 
 optimizer:
