--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,15 @@ requires-python = ">=3.11"
 authors = [
     {name = "Rahul Singhal", email = "rahul@distyl.ai"},
 ]
+keywords = [
+    "prompt optimization",
+    "preference learning",
+    "label-free optimization",
+    "prompt engineering",
+    "LLM judge",
+    "prompt hacking",
+    "prompt hygiene",
+]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Programming Language :: Python :: 3",
@@ -22,12 +31,14 @@ dependencies = [
     "pyyaml>=6.0",
     "datasets>=2.0.0",
     "rich>=13.0",
+]
+
+[project.optional-dependencies]
+ifeval = [
     "instruction_following_eval @ git+https://github.com/josejg/instruction_following_eval.git",
     "nltk>=3.8",
     "langdetect>=1.0",
 ]
-
-[project.optional-dependencies]
 dev = [
     "pytest>=7.0",
     "pytest-asyncio>=0.21",
@@ -52,13 +63,13 @@ packages = [
     "prefpo.data",
     "prefpo.grading",
     "prefpo.judges",
-    "prefpo.tests",
 ]
 
 [tool.setuptools.package-dir]
 prefpo = "."
 
 [tool.setuptools.package-data]
+prefpo = ["py.typed"]
 "prefpo.judges" = ["*.yaml"]
 
 [tool.pytest.ini_options]
